Add missing favicon sizes for better compatibility

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/image.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/image-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/image-16x16.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Resona</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
